--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 
 [features]
 actix = ["dep:actix-web"]
-axum = ["dep:axum"]
+axum = ["dep:axum", "dep:bytes"]
 
 [dependencies]
 swaggapi-macro = { version = "0.1.0", path = "./swaggapi-macro" }
@@ -25,5 +25,8 @@ schemars = "~0.8"
 log = "~0.4"
 serde = "~1"
 serde_json = "~1"
+
 actix-web = { version = "~4", optional = true }
+
 axum = { version = "~0.7", optional = true }
+bytes = { version = "~1", optional = true }
