Build the openapi json

--- a/example_axum/Cargo.toml
+++ b/example_axum/Cargo.toml
@@ -10,6 +10,6 @@ env_logger = "~0.10"
 swaggapi = { path = "..", features = ["axum"] }
 axum = "~0.7"
 tokio = { version = "~1", features = ["full"] }
-serde = { version = "~1", features = ["derive"] }
+serde = { version = "~1", features = ["derive", "rc"] }
 serde_json = "~1"
 schemars = "~0.8"
