--- a/example_actix/Cargo.toml
+++ b/example_actix/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 env_logger = "~0.10"
 swaggapi = { path = "..", features = ["actix"] }
 actix-web = "~4"
-serde = { version = "~1", features = ["derive"] }
+serde = { version = "~1", features = ["derive", "rc"] }
 serde_json = "~1"
 schemars = "~0.8"
