--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [features]
+default = ["swagger-ui"]
+swagger-ui = ["dep:swagger-ui"]
+
 actix = ["dep:actix-web"]
 axum = ["dep:axum", "dep:bytes"]
 
@@ -26,6 +27,7 @@ schemars = "~0.8"
 log = "~0.4"
 serde = "~1"
 serde_json = "~1"
+swagger-ui = { version = "0.1.5", optional = true }
 
 actix-web = { version = "~4", optional = true }
 
