--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ members = [
 
 [package]
 name = "swaggapi"
+description = "Auto-generated OpenAPI documentation"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+authors = ["gammelalf"]
+repository = "https://github.com/gammelalf/swaggapi"
 
 [features]
 default = ["swagger-ui"]
@@ -25,7 +28,7 @@ indexmap = "~2"
 mime = "~0.3"
 schemars = "~0.8"
 log = "~0.4"
-serde = "~1"
+serde = { version = "~1", features = ["rc"] }
 serde_json = "~1"
 swagger-ui = { version = "0.1.5", optional = true }
 
