--- a/example_axum/Cargo.toml
+++ b/example_axum/Cargo.toml
@@ -3,13 +3,11 @@ name = "example_axum"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 env_logger = "~0.10"
 swaggapi = { path = "..", features = ["axum"] }
 axum = "~0.7"
 tokio = { version = "~1", features = ["full"] }
-serde = { version = "~1", features = ["derive", "rc"] }
+serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
 schemars = "~0.8"
