--- a/swaggapi-macro/Cargo.toml
+++ b/swaggapi-macro/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "swaggapi-macro"
+description = "Auto-generated OpenAPI documentation"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+authors = ["gammelalf"]
+repository = "https://github.com/gammelalf/swaggapi"
 
 [lib]
 proc-macro = true
