--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ swagger-ui = ["dep:swagger-ui"]
 actix = ["dep:actix-web"]
 axum = ["dep:axum", "dep:bytes"]
 
+actix-files = ["actix", "dep:actix-files"]
+
 [dependencies]
 swaggapi-macro = { version = "0.1.0", path = "./swaggapi-macro" }
 openapiv3 = "~2"
@@ -33,6 +35,7 @@ serde_json = "~1"
 swagger-ui = { version = "0.1.5", optional = true }
 
 actix-web = { version = "~4", optional = true }
+actix-files = { version = "~0.6", optional = true }
 
 axum = { version = "~0.7", optional = true }
 bytes = { version = "~1", optional = true }
