--- a/example_actix/Cargo.toml
+++ b/example_actix/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 env_logger = "~0.10"
-swaggapi = { path = "..", features = ["actix"] }
-actix-web = "~4"
 serde = { version = "~1", features = ["derive"] }
 serde_json = "~1"
-schemars = "~0.8"
+schemars = { version = "~0.8", features = ["uuid1"] }
+uuid = { version = "~1", features = ["v4", "serde"] }
+
+swaggapi = { path = "..", features = ["actix"] }
+actix-web = "~4"
