--- a/example_axum/Cargo.toml
+++ b/example_axum/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 [dependencies]
 env_logger = "~0.10"
+serde = { version = "~1", features = ["derive"] }
+serde_json = "~1"
+schemars = { version = "~0.8", features = ["uuid1"] }
+uuid = { version = "~1", features = ["v4", "serde"] }
+
 swaggapi = { path = "..", features = ["axum"] }
 axum = "~0.7"
 tokio = { version = "~1", features = ["full"] }
-serde = { version = "~1", features = ["derive"] }
-serde_json = "~1"
-schemars = "~0.8"
